regex patterns fix